<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#593128"
    tools:context=".EditarTarea">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="#653D2D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btnEditarTarea"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tituloTarea"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/titulo"
            android:background="@drawable/redondo"
            android:backgroundTint="#593128"
            android:ems="10"
            android:hint='@string/titulo'
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#B6B6B6"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintWidth_percent=".75" />

        <EditText
            android:id="@+id/descripcionTarea"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:autofillHints="@string/descripcion"
            android:background="@drawable/redondo"
            android:backgroundTint="#593128"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHint="#B6B6B6"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloTarea"
            app:layout_constraintWidth_percent=".75" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnTarea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#653D2D">

            <RadioGroup
                android:id="@+id/grupoTipo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/redondo"
                android:backgroundTint="#38261B"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#6442A1"
                    android:button="@color/black"
                    android:contentDescription="@string/tipo1" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#6442A1"
                    android:button="@color/black"
                    tools:contentDescription="@string/tipo2" />

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#6442A1"
                    android:button="@color/black"
                    android:contentDescription="@string/tipo3" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#6442A1"
                    android:button="@color/black"
                    android:contentDescription="@string/tipo4" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            tools:layout_weight="1">

            <RadioGroup
                android:id="@+id/grupoDificultad"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/redondo"
                android:backgroundTint="#38261B"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#4CAF50"
                    android:button="@color/black"
                    android:buttonTintMode="add"
                    android:contentDescription="@string/facil"
                    android:foreground="@drawable/facil"
                    android:foregroundGravity="center" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#FFCC31"
                    android:button="@color/black"
                    android:buttonTintMode="add"
                    android:contentDescription="@string/media"
                    android:foreground="@drawable/media"
                    android:foregroundGravity="center" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#FFA622"
                    android:button="@color/black"
                    android:buttonTintMode="add"
                    android:contentDescription="@string/dificil"
                    android:foreground="@drawable/dificil"
                    android:foregroundGravity="center" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/redondo"
                    android:backgroundTint="#FF3B3B"
                    android:button="@color/black"
                    android:buttonTintMode="add"
                    android:contentDescription="@string/muyDificil"
                    android:foreground="@drawable/muydificil"
                    android:foregroundGravity="center" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/seleccionFecha"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="#653D2D"
            android:contentDescription="@string/fecha"
            android:onClick="seleccionarFecha"
            tools:layout_marginStart="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="#714933"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".50">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:textSize="20sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textoFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout7"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnTarea"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:background="#00965A"
        android:contentDescription="@string/btnCrearTarea"
        android:onClick="crearTarea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEditarTarea"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>